--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -20,6 +20,9 @@
  */
 %button-reset {
   @extend %os-element-reset;
+
+  @include my.button-padding; /* 6 */
+
   box-sizing: inherit;
   display: inline-flex;
   align-items: center;
@@ -27,8 +30,6 @@
   width: auto; /* 3 */
   max-width: 100%;
   min-height: my.$gutter * 2.5;
-  // stylelint-disable-next-line property-units
-  padding: calc(my.$gutter * 0.75 - my.$stroke) 0.75rem; /* 6 */
   overflow: visible; /* 3 */
   font-weight: my.font-weight('bold');
   line-height: 1.25;
